--- a/hrm_sysmanage_parent/hrm_sysmanage_interface/pom.xml
+++ b/hrm_sysmanage_parent/hrm_sysmanage_interface/pom.xml
@@ -10,6 +10,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hrm_sysmanage_interface</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <!--不能直接依赖starter，有自动配置，而消费者是不需要额。-->
