--- a/hrm_mybatisplus_gen/src/main/resources/mybatisplus-sysmanage.properties
+++ b/hrm_mybatisplus_gen/src/main/resources/mybatisplus-sysmanage.properties
@@ -1,9 +1,9 @@
 #代码放到哪儿
-OutputDir=F:\\java\\idea\\hrm_parent\\hrm_course_parent\\hrm_course_service_9002\\src\\main\\java
+OutputDir=F:\\java\\idea\\hrm_parent\\hrm_sysmanage_parent\\hrm_sysmanage_service\\src\\main\\java
 #mapper.xml SQL映射文件目录
-OutputDirXml=F:\\java\\idea\\hrm_parent\\hrm_course_parent\\hrm_course_service_9002\\src\\main\\resources
+OutputDirXml=F:\\java\\idea\\hrm_parent\\hrm_sysmanage_parent\\hrm_sysmanage_service\\src\\main\\resources
 #接口路径
-InterfaceOutputDirBase=F:\\java\\idea\\hrm_parent\\hrm_course_parent\\hrm_course_interface\\src\\main\\java
+InterfaceOutputDirBase=F:\\java\\idea\\hrm_parent\\hrm_sysmanage_parent\\hrm_sysmanage_interface\\src\\main\\java
 #设置作者
 author=niko
 #自定义包路径
